[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{AGENT_NAME}}"
version = "0.1.0"
description = "AgentCore Runtime Application using Strands SDK with AG-UI"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "ag-ui-protocol >= 0.1.18",
    "ag-ui-strands >= 0.2.0",
    "aws-opentelemetry-distro",
    "bedrock-agentcore >= 1.9.1",
    "botocore[crt] >= 1.35.0",
    "fastapi >= 0.115.0",
    "mcp >= 1.19.0",
    "strands-agents >= 1.15.0",
    "uvicorn >= 0.32.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
